@@ -6,6 +6,7 @@ copyright_year   = 2010
 
 [Bootstrap::lib]
 [@Author::RWSTAUNER]
+builder = both
 ; config pluginbundle synopsis is ini example rather than perl code
 skip_plugins = SynopsisTests
 [Prereqs / RuntimeRequires]
