@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  - By default just use MakeMaker; set 'builder' to 'mb' or 'both'
+    for ModuleBuild and/or DualBuilders
   - Bump @TestingMania required version to 0.14
   - s/CompileTests/Test::Compile/g
   - Stop pruning dist.ini; it should be a familiar file for people
